syntax = "proto3";
package protos;

message CommonRequest {
    string requestId = 1;
}

message CommonResponse {
    string StatusCode = 1;
    CommonErrorResponse Error = 2;
}

message CommonErrorResponse {
    string ErrorCode = 1;
    string ErrorMessage = 2;
}